# FINAL_THESIS

./: .gitignore  MC_anlaysis.ipynb  mc-analysis.py  pyproject.toml  requirements.txt
SDCNN/: SDCNN_BC.ipynb  model_summary.txt  training_results.csv
SDCNN_2BC/: SDCNN_MC.ipynb  SDCNN_MC1.ipynb  training_results.csv  training_results1.csv
SDCNN_BC/: BC_analysis.ipynb  SDCNN_BC.ipynb  model_summary.txt  training_results.csv  training_results_100eps.csv
VGG-16/: VGG-16_BC.ipynb  training_results_vgg16.csv
VGG-16_2BC/: Multiclass_VGG16_Corrected.ipynb  VGG-16_BC.ipynb  VGG-16_MC.ipynb  classification_report.csv  pred.ipynb  training_results1.csv  training_results_vgg16.csv
VGG-16_BC/: VGG-16_BC.ipynb  training_results_vgg16.csv  vgg16_model_summary.txt
